--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             flex-direction: column;
             gap:12px;
             width: 120px;
-            padding: 14px;
+            padding: 16px 14px;
             background-color: cornsilk;
             border-radius: 10px;
         }
@@ -165,11 +165,6 @@
                 <button class="fire-btn">알바 해고</button>
             </div>
             <div class="parttimer-wrap">
-                <!-- <div class="parttimer">
-                    <p class="parttimer-name">알바 <span class="parttimer-idx">2</span></p>
-                    <p class="parttimer-mode">상태 : <span class="parttimer-status">쉬고 있음</span></p>
-                    <p class="parttimer-skill">제조시간 : <span class="parttimer-time">1</span></p>
-                </div> -->
             </div>
         </section>
     </div>
