네이밍 변경

--- a/index.html
+++ b/index.html
@@ -169,5 +169,5 @@
         </section>
     </div>
 </body>
-<script src="coffeeOrderGame.js"></script>
+<script src="makeCoffeeGame.js"></script>
 </html>
